infra/traefik/dashboard/dashboard.ingress.yaml
mengtongun.com---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress-https
  labels:
    lechaterrant.com/app: traefik
    lechaterrant.com/stack: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.lechaterrant.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: admin-auth
  tls:
    secretName: tls-secret

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress-http
  labels:
    lechaterrant.com/app: traefik
    lechaterrant.com/stack: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.lechaterrant.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: https-redirect
